feat: address code-rabbit comment
Signed-off-by: duttarnab <arnab.bdutta@gmail.com>